[package]
name = "aitest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ai-lib = { path = "D:/rustapp/ai-lib", features = ["transport", "streaming"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0.100"
futures = "0.3"
tower-http = { version = "0.6.7", features = ["timeout", "cors"] }
async-stream = "0.3"
async-trait = "0.1"